--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.16.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -16,12 +17,14 @@
     "codehooks-crudlify": "^1.0.8",
     "codehooks-js": "^1.0.10",
     "crypto-js": "^4.1.1",
+    "jwt-decode": "^3.1.2",
     "next": "13.3.0",
     "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "sass": "^1.61.0",
-    "swr": "^2.1.2"
+    "swr": "^2.1.2",
+    "yup": "^1.1.1"
   }
 }
