--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.61.0",
     "swr": "^2.1.2",
     "yup": "^1.1.1"
