--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-image-file-resizer": "^0.4.8",
+    "react-webcam": "^7.0.1",
     "sass": "^1.61.0",
     "swr": "^2.1.2",
     "yup": "^1.1.1"
