--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.16.2",
+    "@fontsource/lilita-one": "^4.5.10",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -24,8 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-image-file-resizer": "^0.4.8",
-    "react-webcam": "^7.0.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-webcam": "^7.0.1",
     "sass": "^1.61.0",
     "swr": "^2.1.2",
     "yup": "^1.1.1"
